--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="grid-container">
+  <div class="grid-item">
     <div class="grid-item">1</div>
     <div class="grid-item">2</div>
     <div class="grid-item">3</div>
@@ -22,5 +23,6 @@
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
   </div>
+</div>
 </body>
 </html>
