--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <div class="grid-container">
-  <div class="grid-item">
-    <div class="grid-item">1</div>
+    <div class="big-item">1</div>
     <div class="grid-item">2</div>
     <div class="grid-item">3</div>
     <div class="grid-item">4</div>
@@ -22,7 +21,6 @@
     <div class="grid-item">10</div>
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
-  </div>
 </div>
 </body>
 </html>
